Fixes padding change on Mobile Screen. Adds new AI/Ty Lue design.

--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .parent {
+        padding: 0;
+    }
     .selection {
       width: 150;
     }
